--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,13 @@
       content="Mirror on the Wall - Message Monitor App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="theme-color" content="#1e3a8a" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-title" content="Mirror on the Wall" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-192.png" />
+
     <title>Mirror on the Wall</title>
   </head>
   <body>
